# VxLogSidecar

./: .gitignore  CMake-Template.cbp  CMakeLists.txt  config.h  configure.ac  sidecar.conf  zlog.conf
src/: CMakeLists.txt  Makefile.am  VxLogSideCar.cbp
src/core/: CMakeLists.txt  Makefile.am  VxLogSideCar  boot.c  boot.h  http_parser.c  main.c  main.h
src/core/VxLogSideCar.dSYM/Contents/: Info.plist
src/core/VxLogSideCar.dSYM/Contents/Resources/DWARF/: VxLogSideCar
